# Cloud

./: .gitignore  .woodpecker.yml  CMakeLists.txt  Dockerfile  docker-compose.yml
include/cloudServer/: core.hpp  service.hpp
libs/mathx/: AGENTS.md  CLAUDE.md  README.md  config.toml
libs/mathx/src/: mathx.ins
libs/ringbuf/: AGENTS.md  CLAUDE.md  README.md  config.toml
libs/ringbuf/src/: ringbuf.ins
libs/strkit/: AGENTS.md  CLAUDE.md  README.md  config.toml
libs/strkit/src/: strkit.ins
libs/vec2/: .gitignore  AGENTS.md  CLAUDE.md  README.md  config.toml
libs/vec2/src/: vec2.ins
migrations/: 001CloudRegistry.sql
src/: cloud.cpp
src/cloudServer/: core.cpp  main.cpp  service.cpp
tests/: cloudServerTests.cpp
